# pyserdesqueezebox

./: Cargo.toml  MANIFEST.in  setup.py  tox.ini
pyserdesqueezebox/: __init__.py
src/: lib.rs
tests/: test_pyserdesqueezebox.py
